[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/InputInfo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/Theme/TempPixel/Button9SliceHover.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Theme/TempPixel/Panel9Slice.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Theme/TempPixel/Button9Slice.png" type="Texture" id=4]
[ext_resource path="res://Scripts/StatsPanel.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/Theme/TempPixel/Button9SlicePressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0
modulate_color = Color( 0.392157, 0.392157, 0.392157, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 6, 6 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
use_filter = true
extra_spacing_top = -4
extra_spacing_bottom = -4
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 4 )
Panel/styles/panel = SubResource( 6 )
VScrollBar/styles/grabber = SubResource( 7 )
VScrollBar/styles/grabber_highlight = SubResource( 8 )
VScrollBar/styles/grabber_pressed = SubResource( 9 )
VScrollBar/styles/scroll = SubResource( 10 )
VScrollBar/styles/scroll_focus = SubResource( 11 )

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../APLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../APLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../MPLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../MPLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StatsPanel" type="Panel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 88.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 35 )
mouse_filter = 2
theme = SubResource( 13 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPLabel" type="Label" parent="HBox"]
margin_top = 3.0
margin_right = 26.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "HP
20"
align = 1
valign = 1

[node name="InputInfo" parent="HBox/HPLabel" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
description = "HP.
Player's hit points."

[node name="HPInspectButton" type="TextureButton" parent="HBox/HPLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBox/HPLabel"]
anims/RESET = SubResource( 14 )
anims/hp_blink = SubResource( 15 )

[node name="APLabel" type="Label" parent="HBox"]
margin_left = 30.0
margin_top = 3.0
margin_right = 56.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "AP
3"
align = 1

[node name="InputInfo" parent="HBox/APLabel" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
description = "AP.
Player's action points."

[node name="APInspectButton" type="TextureButton" parent="HBox/APLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBox/APLabel"]
root_node = NodePath("../../HPLabel")
anims/RESET = SubResource( 16 )
anims/ap_blink = SubResource( 17 )

[node name="MPLabel" type="Label" parent="HBox"]
margin_left = 60.0
margin_top = 3.0
margin_right = 86.0
margin_bottom = 32.0
size_flags_horizontal = 3
text = "MP
10"
align = 1

[node name="InputInfo" parent="HBox/MPLabel" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
description = "MP.
Player's mana points."

[node name="MPInspectButton" type="TextureButton" parent="HBox/MPLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBox/MPLabel"]
root_node = NodePath("../../HPLabel")
anims/RESET = SubResource( 18 )
anims/mp_blink = SubResource( 19 )

[connection signal="pressed" from="HBox/HPLabel/HPInspectButton" to="." method="_on_HPInspectButton_pressed"]
[connection signal="pressed" from="HBox/APLabel/APInspectButton" to="." method="_on_APInspectButton_pressed"]
[connection signal="pressed" from="HBox/MPLabel/MPInspectButton" to="." method="_on_MPInspectButton_pressed"]
